--- a/index.html
+++ b/index.html
@@ -6,13 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vue Todolist</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
 </head>
 <body>
     <div id="app">
         <div class="list-container">
             <ul>
-                <li v-for='(item, i) in todo' :class="item.done ? 'item-done' : ''">{{item.text}}</li>
+                <li v-for='(item, i) in todo'>
+                    <span :class="item.done ? 'item-done' : ''">{{item.text}}</span>
+                    <i @click='removeItem(i)' class="fas fa-trash-alt"></i>
+                </li>
             </ul>
         </div>
     </div>
