--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 </head>
 <body>
     <div id="app">
+        <div class="add-item-area">
+            <input v-model='newItemText' type="text" placeholder="Nuovo Todo">
+            <button @click='addItem'>Aggiungi</button>
+        </div>
+        
         <div class="list-container">
             <ul>
                 <li v-for='(item, i) in todo'>
